# openrecall

./: README.md  pyproject.toml
openrewind/: app.py  database.py  screenshot.py
tests/: test_config.py  test_nlp.py
