[tool.poetry]
name = "openrewind"
version = "0.1.0"
description = ""
authors = ["alikia2x <alikia2x@outlook.com>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "3.0.3"
numpy = "1.26.4"
mss = "9.0.1"
sentence-transformers = "3.0.0"
torch = "2.2.0"
torchvision = "0.17.0"
shapely = "2.0.4"
h5py = "3.11.0"
rapidfuzz = "3.9.3"
Pillow = "10.3.0"
pyobjc = {version="^10.3.1", markers="sys_platform=='darwin'"}
pywin32 = {version="^306", markers="sys_platform=='windows'"}
psutil = {version="^5.9.0", markers="sys_platform=='windows'"}
python-doctr = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
